--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -20,6 +20,8 @@ body {
 
 h1 {
     font-size: 4rem;
+    line-height: 4.6rem;
+    color: $color5;
 }
 
 .container {
@@ -114,4 +116,54 @@ input {
     background-color: $color2;
     border-radius: 0.4rem;
     padding: 1rem;
+    height: 12rem;
+    width: 12rem;
+    line-height: 2rem;
+    display: grid;
+    align-content: center;
+    gap: 1rem;
+
+    h4 {
+        color: $color3;
+    }
+
+    div {
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        align-items: center;
+        align-content: center;
+        height: 100%;
+        align-self: center;
+    }
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+thead {
+    text-align: left;
+}
+
+.hero {
+    background-color: $color3;
+    display: flex;
+    justify-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+    align-items: center;
+
+    span {
+        font-weight: normal;
+        color: $color1;
+    }
+}
+
+tr {
+    padding: 1rem;
+    &:nth-child(even) {
+        background-color: $color4;
+    }
 }
