--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -256,7 +256,8 @@ th {
     border-radius: 0.2rem;
 
     &:hover {
-        background-color: $color4;
+        background-color: $color5;
+        color: $color1;
         cursor: pointer;
     }
 }
@@ -283,7 +284,7 @@ th {
     width: 100%;
     height: 100%;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.92);
 }
 
 .column {
