--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,4 +1,3 @@
-// * COLORS
 $color1: #feffff;
 $color2: #def2f1;
 $color3: #3aafa9;
@@ -21,6 +20,7 @@ body {
 /* width */
 ::-webkit-scrollbar {
     width: 0.2rem;
+    height: 0.2rem;
 }
 
 /* Track */
@@ -45,8 +45,8 @@ a {
     color: $color5;
     text-decoration: none;
 
-    &:hover{
-        color:#2b7a78
+    &:hover {
+        color: #2b7a78;
     }
 }
 
@@ -76,6 +76,7 @@ a {
     justify-items: center;
     justify-content: center;
     height: 100%;
+    position: relative;
 }
 
 footer {
@@ -233,6 +234,11 @@ tr {
     }
 }
 
+td,
+th {
+    padding: 0.6rem;
+}
+
 .actions {
     padding: 0.2rem;
     border-radius: 0.2rem;
@@ -242,11 +248,6 @@ tr {
         cursor: pointer;
         background-color: $color2;
     }
-}
-
-td,
-th {
-    padding: 0.6rem;
 }
 
 .btn2 {
@@ -289,7 +290,7 @@ th {
 
 .column {
     display: grid;
-    gap: 1rem
+    gap: 1rem;
 }
 
 .btn-close {
@@ -299,15 +300,88 @@ th {
     background-color: $color4;
     display: flex;
     margin: 1rem;
-    padding: 0.4rem; 
+    padding: 0.4rem;
     border-radius: 0.2rem;
 
     i {
-        color: $color1
+        color: $color1;
     }
 
     &:hover {
         background-color: #17252a;
         cursor: pointer;
     }
+}
+
+.login-form {
+    background-color: $color1;
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    align-items: flex-start;
+    margin: 2rem auto;
+    gap: 0.4rem;
+    border-radius: 0.2rem;
+    padding: 2.4rem 2rem;
+
+    h2 {
+        padding-bottom: 1rem;
+        margin-bottom: 1rem;
+        width: 100%;
+        border-bottom: 1px solid $color2;
+    }
+
+    label {
+        align-self: flex-start;
+        // &:nth-child(3) {
+        //     margin-top: 1rem;
+        // }
+    }
+
+    input {
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    a,
+    p {
+        font-size: 0.6rem;
+        padding-top: 0.4rem;
+        cursor: pointer;
+    }
+}
+
+.auth {
+    min-height: 100vh;
+    margin: 0;
+    box-sizing: border-box;
+    width: 32rem;
+}
+
+.present {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    i {
+        font-size: 4rem;
+        color: $color4;
+    }
+}
+
+.sign-up {
+    background-color: $color4;
+}
+
+.signout-modal {
+    position: absolute;
+    top: 0;
+    right: 1rem;
+    margin: 2rem 0;
+    z-index: 10;
+    min-height: 2rem;
+    max-height: 6rem;
+    width: 8rem;
 }
