--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -276,14 +276,15 @@ th {
 }
 
 .modal {
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    overflow: hidden;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.92);
 }
