--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -165,11 +165,10 @@ select {
 }
 
 .balance {
-    background-color: $color2;
     border-radius: 0.4rem;
+    min-height: 12rem;
+    min-width: 10rem;
     padding: 1rem;
-    height: 12rem;
-    width: 12rem;
     line-height: 2rem;
     display: grid;
     align-content: center;
@@ -193,6 +192,10 @@ select {
         align-content: center;
         height: 100%;
         align-self: center;
+    }
+
+    &.mod {
+        background: rgba(0, 0, 0, 0.9);
     }
 }
 
@@ -260,6 +263,13 @@ th {
         background-color: $color5;
         color: $color1;
         cursor: pointer;
+    }
+
+    &.mod {
+        background-color: $color1;
+        &:hover {
+            background-color: $color4;
+        }
     }
 }
 
@@ -386,4 +396,52 @@ th {
     min-height: 2rem;
     max-height: 6rem;
     width: 8rem;
+}
+
+.card-amount {
+    font-size: 1rem;
+    width: 100%;
+    text-align: center;
+    color: $color5;
+    border: 1px solid $color5;
+    border-radius: 0.4rem;
+
+    &:hover {
+        background-color: $color3;
+    }
+
+    h4 {
+        color: $color5;
+        padding-top: 0.4rem;
+    }
+
+    h2 {
+        padding-top: 0.4rem;
+        border-top: 1px solid $color5;
+        width: 100%;
+    }
+
+    &.mod {
+        background-color: $color2;
+        &:hover {
+            background-color: $color1;
+        }
+    }
+
+    &.mod2 {
+        border: 1px solid $color2;
+        color: $color1;
+
+        h4 {
+            color: $color1;
+        }
+
+        h2 {
+            border-top: 1px solid $color1;
+        }
+
+        &:hover {
+            background-color: $color4;
+        }
+    }
 }
