--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -59,6 +59,9 @@ a {
     padding: 1rem;
     border-radius: 0.4rem;
     margin-bottom: 1rem;
+    &.sidebar {
+        margin-bottom: auto;       
+    }
 }
 
 .full {
@@ -296,12 +299,17 @@ th {
     justify-content: center;
     align-items: center;
     top: 0;
-    left: 0;
+    right: 0;
     width: 100%;
     height: 100vh;
     overflow: hidden;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.92);
+    z-index: 99;
+    &.sidebar {
+        width: auto;
+        padding: 0 2rem;
+    }
 }
 
 .column {
@@ -390,7 +398,7 @@ th {
 
 .sign-up {
     background-color: $color4;
-}
+} 
 
 .signout-modal {
     position: absolute;
@@ -435,9 +443,21 @@ th {
 }
 
 .update-input {
-        box-sizing: border-box;
-        margin-bottom: 0.8rem;
-        width: 7.2rem;
-        border: 1px solid $color5;
+    box-sizing: border-box;
+    margin-bottom: 0.8rem;
+    width: 7.2rem;
+    border: 1px solid $color5;
+}
+
+.link {
+    text-decoration: underline;
+    text-underline-offset: 0.4rem;
+    padding: 0.4rem 0.8rem;
+    background-color: $color1;
+    border-radius: 0.2rem;
+    cursor: pointer;
+
+    &:hover {
+        background-color: $color2;
     }
-    
+}
